--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lauren1234567890.netlify.app/ukko-react",
+  "homepage": ".",
   "name": "ukko-react",
   "private": true,
   "version": "0.0.0",
