--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "ukko-react",
   "private": true,
   "version": "0.0.0",
@@ -14,7 +15,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.22.3",
     "react-scroll": "^1.8.9",
     "reactjs-popup": "^2.0.5",
     "swiper": "^9.0.5"
